refactor: 전체 조회 기능 성능 개선을 위해 fetch join 사용